--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -43,8 +43,12 @@ aside {
 button{
     /*margin:10px;*/
     background: none;
+    background-color: blue;
+    color:white;
     border: none;
     font-size: 12px;
     padding: 12px;
+    margin:3px;
+    width:90px;
     cursor: pointer;
 }
